# OOFDTD

./: CMakeLists.txt  README.md  main.cpp
documentation/: oofdtd.aux  oofdtd.bib  oofdtd.run.xml  oofdtd.tex
documentation/figs/: Yee_Grid3.eps  efficiency.eps  efficiency.fig  ghost_region.eps  proc_grid.eps  runtime.eps  runtime.fig  speedup.eps  speedup.fig  wave_propagation.eps
include/: Converter.hpp  Domain.hpp  FDTDCommon.hpp  FDTDSimulation.hpp  GeometricObject.hpp  GhostCell.hpp  Hull.hpp  Mesh.hpp  OOFDTD.hpp  PECCell.hpp  RegularDomain.hpp  RegularMesh.hpp  SignalGenerator.hpp  SimulationData.hpp  SourceCell.hpp  Timer.hpp  YeeCell.hpp  mpitools.hpp
src/: Converter.cpp  GeometricObject.cpp  GhostCell.cpp  Hull.cpp  Mesh.cpp  OOFDTD.cpp  PECCell.cpp  RegularMesh.cpp  SourceCell.cpp  YeeCell.cpp
timing/: strong_scaling.sh  weak_scaling.sh
timing/strong_scaling/: oofdtd_strong.o7028743  timing.txt  timing_results.txt
timing/weak_scaling/: oofdtd_weak.o7028696  timing.txt  timing_results.txt
